# merged-orderbook

./: Cargo.toml  README.md  build.rs
proto/: service.proto
src/: api.rs  lib.rs  orderbook.rs
src/exchange/: binance.rs  bitstamp.rs  common.rs  exchange_order_book.rs  mod.rs
