[package]
name = "merged-orderbook"
authors = ["Christoph Otter"]
description = "Provides a gRPC endpoint that merges Binance and BitStamp orderbooks for a single symbol"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread", "signal"] }
tonic = "0.6.2"
prost = "0.9.0"
tokio-stream = { version = "0.1.8", features = ["sync"] }
async-trait = "0.1.53"
futures-util = "0.3.21"
clap = { version = "3.0.14", features = ["derive"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
env_logger = "0.9.0"
log = "0.4.16"

[build-dependencies]
tonic-build = "0.6.2"
